Make admin modal password-only prompt

--- a/TMR.html
+++ b/TMR.html
@@ -1649,15 +1649,12 @@
     <div id="accounts-tracker-backdrop" class="mobile-modal-backdrop" hidden>
         <div class="tmr-menu tmr-modal-panel" role="dialog" aria-modal="true" aria-labelledby="accounts-tracker-title" style="max-width: 680px;">
             <div class="tmr-menu-item" style="display:flex; justify-content:space-between; align-items:center; gap:12px;">
-                <strong id="accounts-tracker-title">Accounts Tracker</strong>
+                <strong id="accounts-tracker-title">Input password</strong>
                 <button id="accounts-tracker-close" class="small-tmr-btn" type="button">Close</button>
-            </div>
-            <div class="tmr-menu-item small" style="opacity:0.9;">
-                Shows account usernames and when they were created.
             </div>
             <div class="tmr-menu-item">
                 <label style="display:block;">
-                    Admin password
+                    Password
                     <input id="accounts-tracker-password" type="password" autocomplete="off" placeholder="Enter admin password" style="width:100%; margin-top:6px;" />
                 </label>
                 <div style="display:flex; gap:8px; align-items:center; margin-top:8px; flex-wrap:wrap;">
