--- a/Docs.html
+++ b/Docs.html
@@ -174,6 +174,8 @@
             padding: 12px;
             font-family: var(--font-family, 'Product Sans', 'Roboto', system-ui, -apple-system, sans-serif);
             height: 100vh;
+            height: 100dvh;
+            padding-bottom: calc(12px + env(safe-area-inset-bottom, 0px));
             overflow: hidden;
             position: relative;
             background-color: white;
@@ -187,7 +189,7 @@
 
         .docs-container {
             display: flex;
-            height: 100vh;
+            height: 100%;
             gap: 12px;
             width: 65%;
             margin: 0 auto;
@@ -363,6 +365,7 @@
             flex: 1;
             overflow-y: auto;
             padding: 24px;
+            padding-bottom: calc(24px + 64px + env(safe-area-inset-bottom, 0px));
             position: relative;
         }
 
@@ -441,7 +444,7 @@
         /* Meibot Button */
         .meibot-btn {
             position: fixed;
-            bottom: 49px;
+            bottom: calc(49px + env(safe-area-inset-bottom, 0px));
             right: 24px;
             width: 60px;
             height: 60px;
@@ -694,6 +697,7 @@
 
             .editor-content {
                 padding: 16px;
+                padding-bottom: calc(16px + 64px + env(safe-area-inset-bottom, 0px));
             }
 
             .toolbar-sidebar {
@@ -703,7 +707,7 @@
             .meibot-btn {
                 width: 50px;
                 height: 50px;
-                bottom: 16px;
+                bottom: calc(16px + env(safe-area-inset-bottom, 0px));
                 right: 16px;
                 font-size: 24px;
             }
