--- a/NotesHQ.html
+++ b/NotesHQ.html
@@ -161,7 +161,7 @@
         })();
     </script>
     <link rel="stylesheet" href="page-transitions.css?v=20260106a">
-    <link rel="stylesheet" href="TMR.css?v=20251231z">
+    <link rel="stylesheet" href="TMR.css?v=20260119f">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Product+Sans:wght@400;500;700&display=swap');
 
